--- a/dresses & jumpsuits.html
+++ b/dresses & jumpsuits.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
     <meta name="author" content="joshua">
     <meta name="description" content="this is the page for dresses & jumpsuits collection">
@@ -8,90 +8,84 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/jhay-fashion-logo.png" type="image/x-icon">
 </head>
-    <body>
-        <div id="d-container">
-            <div class="p-four">Dresses & Jumpsuits</div>
+<body>
+    <header id="dress-header">
+        <h2>Dresses & Jumpsuits</h2>
+    </header>
 
-            <div id="d-divs">
-                <section class="dresses">
-                    <div>
-                        <img src="img/1727782777795.jpg" class="img-1">
-                        <p>large collar corporate suit</p>
-                        <p>$29.99</p>
-                        <p>
-                            Make a bold statement in this Large Collar Corporate Suit. Featuring a stylish oversized collar
-                            and tailored fit, it combines professionalism with modern flair, perfect for the office or
-                            formal events.
-                        </p>
-                        <button>Buy Now</button>
-                    </div>
-
-                    <div>
-                        <img src="img/1727782777808.jpg" class="wedding-gown">
-                        <p>wedding gown</p>
-                        <p>$24.99</p>
-                        <p>
-                            Capture timeless elegance in this stunning Wedding Gown. Designed with intricate detailing and a
-                            flattering silhouette, it's the perfect choice for making unforgettable memories on your special
-                            day.
-                        </p>
-                        <button>Buy Now</button>
-                    </div>
-
-                    <div>
-                        <img src="img/1727782777819.jpg" class="armless-dress">
-                        <p>armless dress</p>
-                        <p>$24.99</p>
-                        <p>
-                            Stay chic and comfortable with this Armless Dress. Featuring a sleek, sleeveless design, it's
-                            perfect for warm days or layering, making it a versatile addition to your wardrobe.
-                        </p>
-                        <button>Buy Now</button>
-                    </div>
-
-                    <div>
-                        <img src="img/1727782777832.jpg" class="denim-armless">
-                        <p>denim armless dress</p>
-                        <p>$39.99</p>
-                        <p>
-                            Embrace effortless style with this Denim Armless Dress. Crafted from soft, breathable fabric, it
-                            features a flattering fit that's perfect for casual outings or summer gatherings
-                        </p>
-                        <button>Buy Now</button>
-                    </div>
-
-                    <div>
-                        <img src="img/1727782777859.jpg" class="belted-shirt-dress">
-                        <p>belted shirt dress</p>
-                        <p>$19.99</p>
-                        <p>
-                            Elevate your style with this Belted Shirt Dress. Featuring a flattering silhouette and a cinched
-                            waist, it combines comfort and sophistication, making it perfect for both casual and dressy
-                            occasions.
-                        </p>
-                        <button>Buy Now</button>
-                    </div>
-
-                    <div>
-                        <img src="img/1727782777875.jpg" class="belted-short-denim-dress">
-                        <p>belted short denim dress</p>
-                        <p>$19.99</p>
-                        <p>Stay stylish and chic with this Belted Short Denim Dress. Featuring a fitted design and a cinched waist, it’s perfect for a casual day out or a fun summer gathering.
-                        </p>
-                        <button>Buy Now</button>
-                    </div>
-                </section>
-            </div>
-
-            <footer id="d-footer">
-                <div class="l-home">
-                    <a href="index.html">Home</a>
-                </div>
-
-                <div class="l-top">
-                    <a href="#">Top</a>
-                </div>
-            </footer>
+    <main id="dress-page">
+        <div>
+            <img src="img/1727782777795.jpg" class="img-1">
+            <p>large collar corporate suit</p>
+            <p>$29.99</p>
+            <p>
+                Make a bold statement in this Large Collar Corporate Suit. Featuring a stylish oversized collar
+                and tailored fit, it combines professionalism with modern flair, perfect for the office or
+                formal events.
+            </p>
+            <button>Buy Now</button>
         </div>
-    </body>
+
+        <div>
+            <img src="img/1727782777808.jpg" class="wedding-gown">
+            <p>wedding gown</p>
+            <p>$24.99</p>
+            <p>
+                Capture timeless elegance in this stunning Wedding Gown. Designed with intricate detailing and a
+                flattering silhouette, it's the perfect choice for making unforgettable memories on your special
+                day.
+            </p>
+            <button>Buy Now</button>
+        </div>
+
+        <div>
+            <img src="img/1727782777819.jpg" class="armless-dress">
+            <p>armless dress</p>
+            <p>$24.99</p>
+            <p>
+                Stay chic and comfortable with this Armless Dress. Featuring a sleek, sleeveless design, it's
+                perfect for warm days or layering, making it a versatile addition to your wardrobe.
+            </p>
+            <button>Buy Now</button>
+        </div>
+
+        <div>
+            <img src="img/1727782777832.jpg" class="denim-armless">
+            <p>denim armless dress</p>
+            <p>$39.99</p>
+            <p>
+                Embrace effortless style with this Denim Armless Dress. Crafted from soft, breathable fabric, it
+                features a flattering fit that's perfect for casual outings or summer gatherings
+            </p>
+            <button>Buy Now</button>
+        </div>
+
+        <div>
+            <img src="img/1727782777859.jpg" class="belted-shirt-dress">
+            <p>belted shirt dress</p>
+            <p>$19.99</p>
+            <p>
+                Elevate your style with this Belted Shirt Dress. Featuring a flattering silhouette and a cinched
+                waist, it combines comfort and sophistication, making it perfect for both casual and dressy
+                occasions.
+            </p>
+            <button>Buy Now</button>
+        </div>
+
+        <div>
+            <img src="img/1727782777875.jpg" class="belted-short-denim-dress">
+            <p>belted short denim dress</p>
+            <p>$19.99</p>
+            <p>Stay stylish and chic with this Belted Short Denim Dress. Featuring a fitted design and a cinched waist, it’s perfect for a casual day out or a fun summer gathering.
+            </p>
+            <button>Buy Now</button>
+        </div>
+    </main>
+
+    <footer>
+        <a href="index.html">Home</a>
+
+        <a href="#">Top</a>
+    </footer>
+</body>
 </html>
