--- a/bottoms.html
+++ b/bottoms.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
     <meta name="author" content="joshua">
     <meta name="description" content="this is the page for bottoms collection">
@@ -8,98 +8,93 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/jhay-fashion-logo.png" type="image/x-icon">
 </head>
-    <body>
-        <div id="b-container">
-            <div class="p-three">Bottoms</div>
-            <div id="b-divs">
-                <section class="bottoms">
-                    <div class="thirteen">
-                        <img src="img/1727782777777.jpg" class="baggy-jean">
-                        <p>baggy jean</p>
-                        <p>$29.99</p>
-                        <p>
-                            Stay effortlessly cool with these Baggy Jeans.
-                            Featuring a relaxed fit and timeless style,
-                            they’re perfect for a casual, laid-back look with
-                            all-day comfort.
-                        </p>
-                        <button>Buy Now</button>
-                    </div>
+<body>
+    <header id="b-header">
+        <h2>Bottoms</h2>
+    </header>
 
-                    <div class="fourteen">
-                        <img src="img/1727782777785.jpg" class="bell-bottom">
-                        <p>bell bottom</p>
-                        <p>$24.99</p>
-                        <p>
-                            Make a statement with these Bell Bottom Jeans.
-                            Designed with a flattering flare and retro-inspired style,
-                            they offer a chic, timeless look perfect for any occasion
-                        </p>
-                        <button>Buy Now</button>
-                    </div>
-
-                    <div class="fifteen">
-                        <img src="img/1727782777894.jpg" class="plain-trouser">
-                        <p>plain trouser</p>
-                        <p>$49.99</p>
-                        <p>
-                            Keep it classic with these Plain Trousers.
-                            Designed for versatility and comfort,
-                            they offer a sleek, polished look that's perfect
-                            for both casual and formal settings
-                        </p>
-                        <button>Buy Now</button>
-                    </div>
-
-                    <div class="sixteen">
-                        <img src="img/1727782777913.jpg" class="retro-bell-bottom">
-                        <p>retro bell bottom</p>
-                        <p>$39.99</p>
-                        <p>
-                            Embrace vintage vibes with these Retro Bell Bottoms. 
-                            Featuring a high-waist and dramatic flare, they deliver a bold,
-                            stylish look that's perfect for making a fashion statement.
-                        </p>
-                        <button>Buy Now</button>
-                    </div>
-
-                    <div>
-                        <img src="img/1727782777934.jpg" class="retro-flat-bell-bottom">
-                        <p>retro flat bell bottom</p>
-                        <p>$19.99</p>
-                        <p>
-                            Step into retro style with these Flat Bell Bottoms.
-                            Featuring a sleek, high-waist design and subtle flare, they offer a timeless, chic look
-                            perfect for both 
-                            casual and dressy occasions.
-                        </p>
-                        <button>Buy Now</button>
-                    </div>
-
-                    <div>
-                        <img src="img/1727782777946.jpg" class="wide-leg-pants">
-                        <p>wide leg pants</p>
-                        <p>$19.99</p>
-                        <p>
-                            Upgrade your wardrobe with these Wide Leg Pants.
-                            Designed for a relaxed yet sophisticated fit, 
-                            they provide effortless style & comfort,
-                            perfect for both work & casual outings.
-                        </p>
-                        <button>Buy Now</button>
-                    </div>
-                </section>
-            </div>
-
-            <footer id="bottoms-footer">
-                <div class="l-home">
-                    <a href="index.html">Home</a>
-                </div>
-
-                <div class="l-top">
-                    <a href="#">Top</a>
-                </div>
-            </footer>
+    <main id="b-page">
+        <div class="thirteen">
+            <img src="img/1727782777777.jpg" class="baggy-jean">
+            <p>baggy jean</p>
+            <p>$29.99</p>
+            <p>
+                Stay effortlessly cool with these Baggy Jeans.
+                Featuring a relaxed fit and timeless style,
+                they’re perfect for a casual, laid-back look with
+                all-day comfort.
+            </p>
+            <button>Buy Now</button>
         </div>
-    </body>
+
+        <div class="fourteen">
+            <img src="img/1727782777785.jpg" class="bell-bottom">
+            <p>bell bottom</p>
+            <p>$24.99</p>
+            <p>
+                Make a statement with these Bell Bottom Jeans.
+                Designed with a flattering flare and retro-inspired style,
+                they offer a chic, timeless look perfect for any occasion
+            </p>
+            <button>Buy Now</button>
+        </div>
+
+        <div class="fifteen">
+            <img src="img/1727782777894.jpg" class="plain-trouser">
+            <p>plain trouser</p>
+            <p>$49.99</p>
+            <p>
+                Keep it classic with these Plain Trousers.
+                Designed for versatility and comfort,
+                they offer a sleek, polished look that's perfect
+                for both casual and formal settings
+            </p>
+            <button>Buy Now</button>
+        </div>
+
+        <div class="sixteen">
+            <img src="img/1727782777913.jpg" class="retro-bell-bottom">
+            <p>retro bell bottom</p>
+            <p>$39.99</p>
+            <p>
+                Embrace vintage vibes with these Retro Bell Bottoms. 
+                Featuring a high-waist and dramatic flare, they deliver a bold,
+                stylish look that's perfect for making a fashion statement.
+            </p>
+            <button>Buy Now</button>
+        </div>
+
+        <div>
+            <img src="img/1727782777934.jpg" class="retro-flat-bell-bottom">
+            <p>retro flat bell bottom</p>
+            <p>$19.99</p>
+            <p>
+                Step into retro style with these Flat Bell Bottoms.
+                Featuring a sleek, high-waist design and subtle flare, they offer a timeless, chic look
+                perfect for both 
+                casual and dressy occasions.
+            </p>
+            <button>Buy Now</button>
+        </div>
+
+        <div>
+            <img src="img/1727782777946.jpg" class="wide-leg-pants">
+            <p>wide leg pants</p>
+            <p>$19.99</p>
+            <p>
+                Upgrade your wardrobe with these Wide Leg Pants.
+                Designed for a relaxed yet sophisticated fit, 
+                they provide effortless style & comfort,
+                perfect for both work & casual outings.
+            </p>
+            <button>Buy Now</button>
+        </div>
+    </main>
+
+    <footer>
+        <a href="index.html">Home</a>
+
+        <a href="#">Top</a>
+    </footer>
+</body>
 </html>
