--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
     <meta name="author" content="joshua">
     <meta name="description" content="this is the page for contact">
@@ -8,61 +8,56 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/jhay-fashion-logo.png" type="image/x-icon">
 </head>
-    <body>
-        <div id="c-container">
-            <div id="c-logo-div">
-                <img src="img/jhay-fashion-logo.png" class="c-logo">
-            </div>
-            <div id="c-page">
-                <article class="about-us">
-                    Welcome to Jhay Fashion, where style meets sustainability! We are passionate about creating a
-                    fashion-forward future for women who care about both their wardrobe and the world around them.<br> At
-                    Jhay Fashion, we believe that fashion should not come at the expense of our planet. That's why we
-                    are dedicated to offering a curated collection of women's clothing made from eco-friendly materials
-                    that combine elegance with environmental responsibility.<br> Our mission is simple: to empower women to
-                    express their unique style while making a positive impact on the environment. We carefully source
-                    our materials and work with ethical manufacturers to ensure that every piece is crafted with care,
-                    from sustainable fabrics to fair labor practices.<br> We envision a world where women can look and feel
-                    their best without compromising their values. By choosing Jhay Fashion, you’re not just making a
-                    style statement—you’re joining a movement toward a more sustainable future.<br> Explore our collections
-                    and discover how you can make a difference with every outfit. Together, let’s redefine fashion for a
-                    better tomorrow!
-                </article>
+<body>
+    <header id="contact-header">
+        <img src="img/jhay-fashion-logo.png" class="c-logo">
+    </header>
 
-                <div class="info">
-                    <p>
-                        We’d love to hear from you! Whether you have questions about our products, want to share your
-                        thoughts, or need assistance, feel free to reach out to us.
-                    </p>
+    <main id="contact-page">
+        <article class="about-us">
+            Welcome to Jhay Fashion, where style meets sustainability! We are passionate about creating a
+            fashion-forward future for women who care about both their wardrobe and the world around them.<br> At
+            Jhay Fashion, we believe that fashion should not come at the expense of our planet. That's why we
+            are dedicated to offering a curated collection of women's clothing made from eco-friendly materials
+            that combine elegance with environmental responsibility.<br> Our mission is simple: to empower women to
+            express their unique style while making a positive impact on the environment. We carefully source
+            our materials and work with ethical manufacturers to ensure that every piece is crafted with care,
+            from sustainable fabrics to fair labor practices.<br> We envision a world where women can look and feel
+            their best without compromising their values. By choosing Jhay Fashion, you’re not just making a
+            style statement—you’re joining a movement toward a more sustainable future.<br> Explore our collections
+            and discover how you can make a difference with every outfit. Together, let’s redefine fashion for a
+            better tomorrow!
+        </article>
 
-                    <form>
-                        <input
-                            type="text"
-                            name="fname"
-                            placeholder="first name"
-                            class="first-name"
-                            required><br><br>
+        <div class="info">
+            <p>
+                We’d love to hear from you! Whether you have questions about our products, want to share your
+                thoughts, or need assistance, feel free to reach out to us.
+            </p>
 
-                        <input type="text" name="l-name" placeholder="last name" class="l-name" required><br><br>
+            <form>
+                <input
+                type="text"
+                name="fname"
+                placeholder="first name"
+                class="first-name"
+                required><br><br>
 
-                        <input type="email" name="email" placeholder="email" class="email" required><br><br>
+                <input type="text" name="l-name" placeholder="last name" class="l-name" required><br><br>
 
-                        <textarea name="comment" id="comment" placeholder="write a message"></textarea>
-                        <br>
+                <input type="email" name="email" placeholder="email" class="email" required><br><br>
 
-                        <button>send</button>
-                    </form>
-                </div>
-            </div>
-            <footer>
-                <div class="l-home">
-                    <a href="index.html">Home</a>
-                </div>
+                <textarea name="comment" id="comment" placeholder="write a message"></textarea>
+                <br>
 
-                <div class="l-top">
-                    <a href="#">Top</a>
-                </div>
-            </footer>
+                <button>send</button>
+            </form>
         </div>
-    </body>
+    </main>
+    <footer>
+        <a href="index.html">Home</a>
+
+        <a href="#">Top</a>
+    </footer>
+</body>
 </html>
