--- a/active-wear.html
+++ b/active-wear.html
@@ -9,91 +9,94 @@
     <link rel="shortcut icon" href="img/jhay-fashion-logo.png" type="image/x-icon">
 </head>
 <body>
-    <header id="active-header">
-        <h2>Active-Wear</h2>
-    </header>
+    <div class="active-container">
+        <header id="active-header">
+            <h2>Active-Wear</h2>
+        </header>
 
-    <main id="active-page">
-        <div>
-            <img src="img/sculpt leggings.webp" class="sculpt-leggings">
-            <p>yoga set for ladies</p>
-            <p>$39.99</p>
-            <p>
-                Achieve both comfort and flexibility with this Yoga Set for ladies.
-                Designed for maximum movement, this matching set offers breathable,
-                stretchable fabric—perfect for your yoga practice or workout routine.
-            </p>
-            <button>Buy Now</button>
-        </div>
+        <main id="active-page">
+            <div>
+                <img src="img/sculpt leggings.webp" class="sculpt-leggings">
+                <p>yoga set for ladies</p>
+                <p>$39.99</p>
+                <p>
+                    Achieve both comfort and flexibility with this Yoga Set for ladies.
+                    Designed for maximum movement, this matching set offers breathable,
+                    stretchable fabric—perfect for your yoga practice or workout routine.
+                </p>
+                <button>Buy Now</button>
+            </div>
 
-        <div>
-            <img src="img/essential-short-18cm.webp" class="essential-yoga-short">
-            <p>Essential yoga short</p>
-            <p>$24.99</p>
-            <p>
-                Move freely in these Essential Yoga Shorts.
-                Designed with breathable, stretchable fabric,
-                they offer comfort and flexibility, perfect for
-                yoga sessions or any active lifestyle
-            </p>
-            <button>Buy Now</button>
-        </div>
+            <div>
+                <img src="img/essential-short-18cm.webp" class="essential-yoga-short">
+                <p>Essential yoga short</p>
+                <p>$24.99</p>
+                <p>
+                    Move freely in these Essential Yoga Shorts.
+                    Designed with breathable, stretchable fabric,
+                    they offer comfort and flexibility, perfect for
+                    yoga sessions or any active lifestyle
+                </p>
+                <button>Buy Now</button>
+            </div>
 
-        <div>
-            <img src="img/active long bike short.jpeg" class="active-long-bike-short">
-            <p>active long bike short</p>
-            <p>$49.99</p>
-            <p>
-                Stay comfortable and stylish in these Active Long Bike Shorts.
-                Made with breathable, flexible fabric, they provide the perfect
-                fit for workouts, cycling, or casual wear.
-            </p>
-            <button>Buy Now</button>
-        </div>
+            <div>
+                <img src="img/active long bike short.jpeg" class="active-long-bike-short">
+                <p>active long bike short</p>
+                <p>$49.99</p>
+                <p>
+                    Stay comfortable and stylish in these Active Long Bike Shorts.
+                    Made with breathable, flexible fabric, they provide the perfect
+                    fit for workouts, cycling, or casual wear.
+                </p>
+                <button>Buy Now</button>
+            </div>
 
-        <div>
-            <img src="img/skinny leggings.jpg" class="skinny-leggings">
-            <p>Skinny leggings</p>
-            <p>$39.99</p>
-            <p>
-                Stay confident and comfortable with our Skinny Leggings.
-                Designed with a flattering fit and stylish print,
-                they offer both style and support
-                for workouts or casual wear.
-            </p>
-            <button>Buy Now</button>
-        </div>
+            <div>
+                <img src="img/skinny leggings.jpg" class="skinny-leggings">
+                <p>Skinny leggings</p>
+                <p>$39.99</p>
+                <p>
+                    Stay confident and comfortable with our Skinny Leggings.
+                    Designed with a flattering fit and stylish print,
+                    they offer both style and support
+                    for workouts or casual wear.
+                </p>
+                <button>Buy Now</button>
+            </div>
 
-        <div>
-            <img src="img/1727782777640.jpg" class="yoga-leggings">
-            <p>yoga leggings</p>
-            <p>$19.99</p>
-            <p>
-                These Yoga Leggings provide the perfect balance
-                of comfort and flexibility.
-                With a high-waist design and stretchable fabric,
-                they’re ideal for yoga, workouts, or everyday wear.
-            </p>
-            <button>Buy Now</button>
-        </div>
+            <div>
+                <img src="img/1727782777640.jpg" class="yoga-leggings">
+                <p>yoga leggings</p>
+                <p>$19.99</p>
+                <p>
+                    These Yoga Leggings provide the perfect balance
+                    of comfort and flexibility.
+                    With a high-waist design and stretchable fabric,
+                    they’re ideal for yoga, workouts, or everyday wear.
+                </p>
+                <button>Buy Now</button>
+            </div>
 
-        <div>
-            <img src="img/1727782777654.jpg" class="african-yoga-set">
-            <p>african print yoga set</p>
-            <p>$19.99</p>
-            <p>
-                Stand out in style with this African Print Yoga Set.
-                Featuring vibrant patterns and breathable, stretchable fabric,
-                it offers both comfort and flair for your yoga sessions or workouts
-            </p>
-            <button>Buy Now</button>
-        </div>
-    </main>
+            <div>
+                <img src="img/1727782777654.jpg" class="african-yoga-set">
+                <p>african print yoga set</p>
+                <p>$19.99</p>
+                <p>
+                    Stand out in style with this African Print Yoga Set.
+                    Featuring vibrant patterns and breathable, stretchable fabric,
+                    it offers both comfort and flair for your yoga sessions or workouts
+                </p>
+                <button>Buy Now</button>
+            </div>
+        </main>
 
-    <footer>
-        <a href="index.html">Home</a>
+        <footer class="second-footer">
+            <a href="index.html">Home</a>&NonBreakingSpace; &NonBreakingSpace;
 
-        <a href="#">Top</a>
-    </footer>
+            <a href="#">Top</a>
+        </footer>
+    </div>
+
 </body>
 </html>
