--- a/tops & blouses.html
+++ b/tops & blouses.html
@@ -89,10 +89,10 @@
         </div>
     </div>
 
-    <footer>
-            <a href="index.html">Home</a>
+    <footer class="second-footer">
+        <a href="index.html">Home</a>&NonBreakingSpace; &NonBreakingSpace;
 
-            <a href="#">Top</a>
+        <a href="#">Top</a>
     </footer>
 </body>
 </html>
