--- a/accessories.html
+++ b/accessories.html
@@ -9,92 +9,94 @@
     <link rel="shortcut icon" href="img/jhay-fashion-logo.png" type="image/x-icon">
 </head>
 <body>
-    <header id="a-header">
-        <h2>Accessories</h2>
-    </header>
+    <div class="a-container">
+        <header id="a-header">
+            <h2>Accessories</h2>
+        </header>
 
-    <main id="a-page">
-        <div>
-            <img src="img/bag-1.jpeg" class="bag-1">
-            <p>Cross-Body Bag for ladies</p>
-            <p>$29.99</p>
-            <p>
-                Stylish and practical, this Cross-Body Bag is perfect for on-the-go. With a sleek design and
-                adjustable strap, it’s the ideal everyday accessory for any outfit
-            </p>
-            <button>Buy Now</button>
-        </div>
+        <main id="a-page">
+            <div>
+                <img src="img/bag-1.jpeg" class="bag-1">
+                <p>Cross-Body Bag for ladies</p>
+                <p>$29.99</p>
+                <p>
+                    Stylish and practical, this Cross-Body Bag is perfect for on-the-go. With a sleek design and
+                    adjustable strap, it’s the ideal everyday accessory for any outfit
+                </p>
+                <button>Buy Now</button>
+            </div>
 
-        <div>
-            <img src="img/bag-2.jpeg" class="bag-2">
-            <p>Handbag for ladies</p>
-            <p>$24.99</p>
-            <p>
-                Elegant and spacious, this Handbag for ladies 
-                is your perfect daily companion.
-                Designed to combine style and function, it offers ample room for essentials while
-                complementing any look
-            </p>
-            <button>Buy Now</button>
-        </div>
+            <div>
+                <img src="img/bag-2.jpeg" class="bag-2">
+                <p>Handbag for ladies</p>
+                <p>$24.99</p>
+                <p>
+                    Elegant and spacious, this Handbag for ladies 
+                    is your perfect daily companion.
+                    Designed to combine style and function, it offers ample room for essentials while
+                    complementing any look
+                </p>
+                <button>Buy Now</button>
+            </div>
 
-        <div>
-            <img src="img/shoe-2.jpeg" class="shoe-2">
-            <p>Women's Shoes Heel</p>
-            <p>$49.99</p>
-            <p>
-                Stylish and practical, this Cross-Body Bag is perfect for on-the-go.
-                With a sleek design and adjustable strap,
-                it’s the ideal everyday accessory for any outfit
-            </p>
-            <button>Buy Now</button>
-        </div>
+            <div>
+                <img src="img/shoe-2.jpeg" class="shoe-2">
+                <p>Women's Shoes Heel</p>
+                <p>$49.99</p>
+                <p>
+                    Stylish and practical, this Cross-Body Bag is perfect for on-the-go.
+                    With a sleek design and adjustable strap,
+                    it’s the ideal everyday accessory for any outfit
+                </p>
+                <button>Buy Now</button>
+            </div>
 
-        <div>
-            <img src="img/shoe-1.jpeg" class="shoe-1">
-            <p>Women's work flat shoe</p>
-            <p>$39.99</p>
-            <p>
-                Stay comfortable and stylish with these Women's Work Flat.
-                Designed for all-day wear, they offer the perfect
-                blend of elegance and ease, ideal for the office
-                or any professional setting
-            </p>
-            <button>Buy Now</button>
-        </div>
+            <div>
+                <img src="img/shoe-1.jpeg" class="shoe-1">
+                <p>Women's work flat shoe</p>
+                <p>$39.99</p>
+                <p>
+                    Stay comfortable and stylish with these Women's Work Flat.
+                    Designed for all-day wear, they offer the perfect
+                    blend of elegance and ease, ideal for the office
+                    or any professional setting
+                </p>
+                <button>Buy Now</button>
+            </div>
 
-        <div>
-            <img src="img/jewelry-1.jpeg" class="jewelry-1">
-            <p>Complete jewelry set</p>
-            <p>$19.99</p>
-            <p>
-                Elevate your elegance with this Complete Jewelry Set.
-                Featuring a matching necklace, earrings, and bracelet, 
-                this set adds a touch of sophistication to any outfit,
-                perfect for both special occasions and everyday wear
-            </p>
-            <button>Buy Now</button>
-        </div>
+            <div>
+                <img src="img/jewelry-1.jpeg" class="jewelry-1">
+                <p>Complete jewelry set</p>
+                <p>$19.99</p>
+                <p>
+                    Elevate your elegance with this Complete Jewelry Set.
+                    Featuring a matching necklace, earrings, and bracelet, 
+                    this set adds a touch of sophistication to any outfit,
+                    perfect for both special occasions and everyday wear
+                </p>
+                <button>Buy Now</button>
+            </div>
 
-        <div>
-            <img src="img/jewelry-2.jpeg" class="jewelry-2">
-            <p>wrist bracelet</p>
-            <p>$19.99</p>
-            <p>
-                Add a touch of charm with this Wrist Bracelet.
-                Designed for versatility, it features a stylish
-                design that complements any look, making it 
-                the perfect accessory for everyday wear
-                or special occasions
-            </p>
-            <button>Buy Now</button>
-        </div>
-    </main>
+            <div>
+                <img src="img/jewelry-2.jpeg" class="jewelry-2">
+                <p>wrist bracelet</p>
+                <p>$19.99</p>
+                <p>
+                    Add a touch of charm with this Wrist Bracelet.
+                    Designed for versatility, it features a stylish
+                    design that complements any look, making it 
+                    the perfect accessory for everyday wear
+                    or special occasions
+                </p>
+                <button>Buy Now</button>
+            </div>
+        </main>
 
-    <footer>
-        <a href="index.html">Home</a>
+        <footer class="second-footer">
+            <a href="index.html">Home</a>&NonBreakingSpace; &NonBreakingSpace;
 
-        <a href="#">Top</a>
-    </footer>
+            <a href="#">Top</a>
+        </footer>
+    </div>
 </body>
 </html>
