--- a/bottoms.html
+++ b/bottoms.html
@@ -91,8 +91,8 @@
         </div>
     </main>
 
-    <footer>
-        <a href="index.html">Home</a>
+    <footer class="second-footer">
+        <a href="index.html">Home</a>&NonBreakingSpace; &NonBreakingSpace;
 
         <a href="#">Top</a>
     </footer>
