--- a/contact.html
+++ b/contact.html
@@ -27,13 +27,13 @@
             style statement—you’re joining a movement toward a more sustainable future.<br> Explore our collections
             and discover how you can make a difference with every outfit. Together, let’s redefine fashion for a
             better tomorrow!
-        </article>
+        </article><br><br>
 
         <div class="info">
             <p>
                 We’d love to hear from you! Whether you have questions about our products, want to share your
                 thoughts, or need assistance, feel free to reach out to us.
-            </p>
+            </p><br><br>
 
             <form>
                 <input
@@ -54,8 +54,9 @@
             </form>
         </div>
     </main>
-    <footer>
-        <a href="index.html">Home</a>
+
+    <footer class="second-footer">
+        <a href="index.html">Home</a>&NonBreakingSpace; &NonBreakingSpace;
 
         <a href="#">Top</a>
     </footer>
