--- a/dresses & jumpsuits.html
+++ b/dresses & jumpsuits.html
@@ -31,8 +31,7 @@
             <p>wedding gown</p>
             <p>$24.99</p>
             <p>
-                Capture timeless elegance in this stunning Wedding Gown. Designed with intricate detailing and a
-                flattering silhouette, it's the perfect choice for making unforgettable memories on your special
+                Capture timeless elegance in this stunning Wedding Gown. Designed with intricate detailing and a flattering silhouette, it's the perfect choice for making unforgettable memories on your special
                 day.
             </p>
             <button>Buy Now</button>
@@ -82,8 +81,8 @@
         </div>
     </main>
 
-    <footer>
-        <a href="index.html">Home</a>
+    <footer class="second-footer">
+        <a href="index.html">Home</a>&NonBreakingSpace; &NonBreakingSpace;
 
         <a href="#">Top</a>
     </footer>
