--- a/outerwear.html
+++ b/outerwear.html
@@ -89,8 +89,8 @@
         </div>
     </main>
 
-    <footer>
-        <a href="index.html">Home</a>
+    <footer class="second-footer">
+        <a href="index.html">Home</a>&NonBreakingSpace; &NonBreakingSpace;
 
         <a href="#">Top</a>
     </footer>
