--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
             <p>Experience elegance and comfort with this  Satin Blouse. The soft, luxurious fabric drapes beautifully, making it an ideal choice for both casual outings and special occasions.</p>
             <p>$19.99</p><br><br>
                 <button>Buy Now</button>
-            </div>
-        </section>   
+            </div><br><br>
+        </section>
 
         <section class="banner-1">
             <img src="img/banner.jpg" class="slide-2">
